@@ -2,6 +2,7 @@ Process Hacker
 
 1.3.8.5
  * NEW/IMPROVED:
+   * Full support for Windows Vista SP2
    * Notification icon process list is now sorted
    * Thread wait analysis - right-click a thread and choose 
      Analyze > Wait to see what a thread is hanging on
@@ -10,7 +11,8 @@ Process Hacker
    * Semaphore objects can now be modified - acquire, release
  * FIXED:
    * #2795871 - "Hidden Processes window resizing problem"
-   * Windows 7 RC BSOD (Windows 7 Beta is no longer supported)
+   * Windows 7 RC BSOD (Windows 7 Beta is no longer supported) at
+     startup; support is STILL EXPERIMENTAL
    * Memory search addresses being in decimal
 
 1.3.8.0
